Portfólio completo - PHP, Laravel, Vue 3, Vuetify

--- a/PORTIFOLIO.html
+++ b/PORTIFOLIO.html
@@ -66,14 +66,14 @@
       </div>
       <div class="hero-image">
         <div class="image-wrapper">
-          <img src="mm1.jpg" alt="Marcos Matheus" loading="lazy" width="400" height="400" />
+          <img src="mm1.jpeg" alt="Marcos Matheus" loading="lazy" width="400" height="400" />
           <div class="image-glow"></div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- ===== SOBRE ===== -->
+  <!-- ===== SOBRE ==== -->
   <section class="section alt-bg" id="sobre" aria-labelledby="sobre-title">
     <div class="container">
       <h2 id="sobre-title" class="section-title">Sobre Mim</h2>
